# tracelib

./: README.md
.github/workflows/: docker-publish.yml  pypi-publish.yml
tracelib-python/: .gitignore  README.md  pyproject.toml
tracelib-python/tracelib/: __init__.py  core.py  middleware.py  utils.py
tracelib-server/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
tracelib-server/prisma/: schema.prisma
tracelib-server/prisma/migrations/20250718175128_init/: migration.sql
tracelib-server/src/app/: layout.tsx  page.tsx
tracelib-server/src/app/api/traces/: route.ts
tracelib-server/src/app/trace/[id]/: page.tsx
tracelib-server/src/components/: DetailView.tsx  TraceRow.tsx  TraceTree.tsx
tracelib-server/src/utils/: logLevelColor.ts  prisma.ts  statusColor.ts
